; ModuleID = '/home/carl/AnghaBench/linux/drivers/misc/extr_atmel-ssc.c_ssc_remove.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/misc/extr_atmel-ssc.c_ssc_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { i32 }
%struct.ssc_device = type { i32 }

@user_lock = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.platform_device*)* @ssc_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ssc_remove(%struct.platform_device* %0) #0 {
  %2 = alloca %struct.platform_device*, align 8
  %3 = alloca %struct.ssc_device*, align 8
  store %struct.platform_device* %0, %struct.platform_device** %2, align 8
  %4 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %5 = call %struct.ssc_device* @platform_get_drvdata(%struct.platform_device* %4)
  store %struct.ssc_device* %5, %struct.ssc_device** %3, align 8
  %6 = load %struct.ssc_device*, %struct.ssc_device** %3, align 8
  %7 = call i32 @ssc_sound_dai_remove(%struct.ssc_device* %6)
  %8 = call i32 @spin_lock(i32* @user_lock)
  %9 = load %struct.ssc_device*, %struct.ssc_device** %3, align 8
  %10 = getelementptr inbounds %struct.ssc_device, %struct.ssc_device* %9, i32 0, i32 0
  %11 = call i32 @list_del(i32* %10)
  %12 = call i32 @spin_unlock(i32* @user_lock)
  ret i32 0
}

declare dso_local %struct.ssc_device* @platform_get_drvdata(%struct.platform_device*) #1

declare dso_local i32 @ssc_sound_dai_remove(%struct.ssc_device*) #1

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @list_del(i32*) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
